# llvm-testRoomForPass

./: .gitignore  README.md
GenerateFor/src/: CMakeLists.txt  main.cpp
GenerateFor/test/: for_sample.c
LinkWithInline/src/: CMakeLists.txt  LinkWithInline.cpp  LinkWithInline.h  main.cpp
LinkWithInline/test/: ope.c  ope.h
LocalizeGlobalVariables/src/: CMakeLists.txt  LocalizeGlobalVariableInSingleFunction.cpp  LocalizeGlobalVariableInSingleFunction.h  LocalizeGlobalVariableInSingleFunctionPass.cpp  LocalizeGlobalVariableInSingleFunctionPass.h  main.cpp
LocalizeGlobalVariables/test/: main.bc  main.c  ope.bc  ope.c  ope.h  out.bc
